fixed proj. portfolio header alignment bug

--- a/src/styles/largeSizeStyles.css
+++ b/src/styles/largeSizeStyles.css
@@ -416,7 +416,6 @@ body.random {
     color: var(--color-primary);
     padding: 0;
     margin: 0;
-    position: absolute;
 }
 
 .projectPortfolio-image-container {
